Fixing search behind navigation
This was only an issue in the guide.

--- a/src/Theme/css/styles.css
+++ b/src/Theme/css/styles.css
@@ -220,6 +220,7 @@ a .type, a .variable {
     color: #000;
     padding: 10px;
     margin: 0;
+    z-index: 9;
 }
 
 #search-result a {
